Tasks - .wrapTask some fix height

--- a/src/components/Main/Tasks/Tasks.module.css
+++ b/src/components/Main/Tasks/Tasks.module.css
@@ -1,5 +1,5 @@
 .wrapTasks {
-  height: calc(100vh - 120px);
+  height: calc(100vh / 100 * 82);
 }
 .wrapEnterDay {
   position: fixed;
